--- a/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
@@ -17,3 +17,8 @@
 @import "theme/mixins";
 @import "theme/post-styles/post-headings";
 @import "theme/post-styles/post-block-intro-block";
+@import "theme/post-styles/regular-content";
+@import "theme/post-styles/quote-block";
+@import "theme/post-styles/video-wrapper";
+@import "theme/post-styles/dyk";
+@import "theme/post-styles/where-are-they-now";
