--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_post-headings.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_post-headings.scss
@@ -31,6 +31,9 @@ figcaption {
     margin-top: $space;
     margin-bottom: 26px;
     position: relative;
+    p {
+        margin: 0;
+    }
     .caption-arrow {
         position: absolute;
         left: -25px;
