--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_mixins.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_mixins.scss
@@ -10,6 +10,12 @@
     }
 }
 
+@mixin citation-font {
+    font-size: 14px;
+    line-height: 18px;
+    font-family: 'Suisse Reg', sans-serif;
+}
+
 @mixin large-title {
     font-size: 48px;
     line-height: 50px;
@@ -28,6 +34,19 @@
     font-family: 'Suisse Reg', sans-serif;
 }
 
+
+@mixin post-body-subheading {
+    font-size: 28px;
+    line-height: 36px;
+    font-family: 'Suisse Bold', sans-serif;
+}
+
+@mixin post-aside-font {
+    font-size: 14px;
+    line-height: 19px;
+    font-family: 'Suisse Reg', sans-serif;
+}
+
 @mixin post-meta {
     font-size: 14px;
     line-height: 24px;
@@ -42,5 +61,12 @@
     line-height: 20px;
     font-family: 'Suisse Reg', sans-serif;
     color: #585858;
+}
+
+@mixin flex-height {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
