--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_post-headings.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_post-headings.scss
@@ -41,10 +41,13 @@ figcaption {
     }
 }
 
-.vertical-caption-sec {
-    figcaption {
-        left: 40px;
-    }
+//.vertical-caption-sec {
+//    figcaption {
+//        left: 40px;
+//    }
+//}
+figcaption {
+    left: 40px;
 }
 
 
