--- a/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
@@ -22,3 +22,4 @@
 @import "theme/post-styles/video-wrapper";
 @import "theme/post-styles/dyk";
 @import "theme/post-styles/where-are-they-now";
+@import "theme/post-styles/image-block";
