--- a/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
@@ -23,3 +23,5 @@
 @import "theme/post-styles/dyk";
 @import "theme/post-styles/where-are-they-now";
 @import "theme/post-styles/image-block";
+@import "theme/post-styles/author";
+@import "theme/footer";
