--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_mixins.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_mixins.scss
@@ -16,6 +16,12 @@
     font-family: 'Suisse Reg', sans-serif;
 }
 
+@mixin author-font {
+    font-size: 15px;
+    line-height: 20px;
+    font-family: 'Suisse Reg', sans-serif;
+}
+
 @mixin large-title {
     font-size: 48px;
     line-height: 50px;
@@ -70,3 +76,9 @@
     justify-content: center;
 }
 
+@mixin footer-font {
+    font-size: 14px;
+    line-height: 20px;
+    font-family: 'Suisse Reg', sans-serif;
+    color: $white;
+}
