--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_global.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_global.scss
@@ -47,6 +47,9 @@ body {
     font-family: 'Lynon Reg', sans-serif;
     font-size: 20px;
     line-height: 30px;
+    strong {
+        font-family: 'Lynon Bold', sans-serif;
+    }
 }
 
 .full {
