--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_global.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_global.scss
@@ -1,5 +1,10 @@
 $black: #000;
 $white: #fff;
+$ryersonBlue: #004C9B;
+$green: #00DA2B;
+$blue: #5BD2FF;
+$orange: #FF891D;
+$yellow: #FCF661;
 $space: 18px;
 
 @font-face {
