--- a/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
@@ -15,8 +15,9 @@
 
 @import "theme/global";
 @import "theme/mixins";
+@import "theme/header";
 @import "theme/post-styles/post-headings";
-@import "theme/post-styles/post-block-intro-block";
+@import "theme/post-styles/intro-block";
 @import "theme/post-styles/regular-content";
 @import "theme/post-styles/quote-block";
 @import "theme/post-styles/video-wrapper";
@@ -24,4 +25,5 @@
 @import "theme/post-styles/where-are-they-now";
 @import "theme/post-styles/image-block";
 @import "theme/post-styles/author";
+@import "theme/archive";
 @import "theme/footer";
