--- a/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
@@ -26,4 +26,6 @@
 @import "theme/post-styles/image-block";
 @import "theme/post-styles/author";
 @import "theme/archive";
+@import "theme/archive-mag";
+@import "theme/current-issue-page";
 @import "theme/footer";
