--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_archive.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_archive.scss
@@ -26,6 +26,9 @@
         &.orange {
             background-image: linear-gradient(180deg, $orange, $orange);
         }
+        &.yellow {
+            background-image: linear-gradient(180deg, $yellow, $yellow);
+        }
     }
     
     
