--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_author.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_author.scss
@@ -43,6 +43,7 @@
         display: inline-block;
         padding: 2px 8px;
         margin-right: 5px;
+        margin-bottom: 10px;
         border-radius: 5px;
         &:hover {
             text-decoration: none;
