--- a/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
@@ -27,5 +27,6 @@
 @import "theme/post-styles/author";
 @import "theme/archive";
 @import "theme/archive-mag";
+@import "theme/home";
 @import "theme/current-issue-page";
 @import "theme/footer";
