--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_current-issue-page.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_current-issue-page.scss
@@ -45,3 +45,19 @@
         display: none;
     }
 }
+
+.past-issues {
+    background: $ryersonBlue;
+    color: $white;
+    .dotted-heading {
+        @include dotted-heading;
+    }
+}
+
+.past-issue {
+    text-align: center;
+    margin-top: 75px;
+    img {
+        margin-bottom: 40px;
+    }
+}
