--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_global.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_global.scss
@@ -62,6 +62,11 @@ body {
     float: left;
 }
 
+.container-fluid {
+    padding-left: 35px;
+    padding-right: 35px;
+}
+
 .sec-pad {
     padding-top: 55px;
     padding-bottom: 55px;
