--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_mixins.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_mixins.scss
@@ -1,6 +1,10 @@
 //Header
 
 @mixin box-color-hovers {
+    transition: 0.2s all;
+    &:hover {
+//        filter: grayscale(100%);
+    }
     &.green {
         &:hover {
             &::before {
@@ -159,6 +163,18 @@
     font-family: 'Lynon Reg', sans-serif;
 }
 
+@mixin home-archive-title-font {
+    font-size: 44px;
+    line-height: 50px;
+    font-family: 'Lynon Bold', sans-serif;
+}
+
+@mixin home-archive-subhading-font {
+    font-size: 44px;
+    line-height: 50px;
+    font-family: 'Lynon Reg', sans-serif;
+}
+
 @mixin alm-btn-font {
     font-size: 16px;
     line-height: 18px;
@@ -170,4 +186,15 @@
     font-size: 36px;
     line-height: 36px;
     font-family: 'Lynon Reg', sans-serif;
+}
+
+@mixin dotted-heading {
+    font-family: 'Suisse Bold', sans-serif;
+    text-transform: lowercase;
+    font-size: 48px;
+    line-height: 52px;
+    padding-bottom: 25px;
+    color: $white;
+    border-bottom: 2px dotted $white;
+    width: 100%;
 }
