--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_home.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_home.scss
@@ -81,13 +81,30 @@
     left: -100px;
     a.see-all {
         @include author-font;
+        line-height: 20px;
+        font-family: "Suisse Reg",sans-serif;
         font-size: 18px;
         position: absolute;
-        right: 0;
-        top: 0;
-        background: red;
-        letter-spacing: normal;
-        color: $white;
+        right: -39px;
+        top: -23px;
+        img.see-all-circle {
+            width: 75px;
+        }
+    }
+    span.stars {
+        position: absolute;
+        display: block;
+        right: -49px;
+        top: 38px;
+        width: 64px;
+        height: 64px;
+        display: block;
+        img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            display: block;
+        }
     }
     &.green {
         background-image: linear-gradient(180deg, $green, $green);
