--- a/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
@@ -16,6 +16,7 @@
 @import "theme/global";
 @import "theme/mixins";
 @import "theme/header";
+@import "theme/drawer";
 @import "theme/post-styles/post-headings";
 @import "theme/post-styles/intro-block";
 @import "theme/post-styles/regular-content";
